--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,8 @@
 footer {
-background-color: #87878a;
-height: 8vh;
-display: flex;
-align-items: center;
-justify-content: center;
-color: rgb(0, 0, 0);
-}
+    background-color: #210024;
+    height: 8vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f5e8db;
+  }
