--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,57 +1,71 @@
-form {
-  width: auto;
-  background-color: #f5f5f5;
+.form  {
+  margin: 30px 0 15px 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
   height: auto;
-  padding-left: 5vw;
-  padding-right: 5vw;
+  justify-content: space-between;
+  align-items: center;
 
-  label {
-    display: flex;
-    flex-direction: column;
-    display: flex;
-    margin: 1rem 0;
-    font-size: 1.2em;
-    padding: 0.5vh;
+  fieldset {
 
-    &.methods {
-      span {
-        cursor: pointer;
-        margin-top: 1vh;
-        padding: 0.25rem 0.5rem;
-        background-color: #0f6b3d;
-        border: none;
-        color: white;
-        padding: 1vh 2vh;
-        text-decoration: none;
-        font-size: 1em;
-        font-family: Georgia, "Times New Roman", Times, serif;
+    width: 45%;
+    height: 100%;
+  }
 
-        &:hover,
-        &.active {
-          background: #210024;
-        }
-      }
+  fieldset div {
+    position: relative;
+    height: 100%;
+  }
+
+  legend {
+    font-size: 1.1em;
+  }
+
+  input[placeholder="http://"] {
+    width: 400px;
+    font-size: 1.1em;
+  }
+
+  input[type="radio"] {
+    opacity: 0;
+    position: absolute;
+    height: 40px;
+    width: 80px;
+    margin: 0 20px;
+
+    &:checked + label {
+      background-color: blue;
+      color: white;
+      font-weight: bold;
+    }
+    &+ label {
+      margin: 5px 30px 0 30px;
+      padding: 5px;
+      width: 200px;
+      border-radius: 3px;
+    }
+    &:hover + label {
+      border: 1px solid blue;
+      cursor: pointer;
     }
   }
-  input[type="text"] {
-    border: none;
-    border-radius: 1vh;
-    padding: 2vh 5vh;
+
+
+  button {
+    height: 75%;
+    align-self: center;
+    background-color:rgb(4, 19, 18);
+    color: white;
+    font-size: 1.5em;
+    width: 100px;
+    
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
-
-input[type="submit"] {
-  background-color: #0f6b3d;
-  border: none;
-  color: white;
-  padding: 2vh 7vh;
-  text-decoration: none;
-  margin: 1vw;
-  cursor: pointer;
-  font-size: 1.5em;
-  font-family: Georgia, "Times New Roman", Times, serif;
+textarea {
+  font-family: 'Courier New', Courier, monospace;
+  color:black;
+  font-weight: bold; 
 }
